# C-Linear-Structure

./: .gitignore  CMakeLists.txt
chapter01/: CMakeLists.txt
chapter01/ex01-arrayBaseLinearStructure/: CMakeLists.txt  Makefile  dataStructure.c
chapter01/ex02-binaryModeSave/: CMakeLists.txt  Makefile  main.c
chapter01/ex03-printMenu/: CMakeLists.txt  Makefile  ui.c
chapter02/: CMakeLists.txt
chapter02/ex01-dynamicDataLinkedList/: CMakeLists.txt  Makefile  dynamicDataLinkedList.c
chapter02/ex01-dynamicDataLinkedList/buildDir/: ex0201DynamicDataLinkedList
chapter02/ex01-dynamicDataLinkedListStack/: CMakeLists.txt  Makefile  dynamicDataLinkedList.c
chapter02/ex02-dynamicDataLinkedListQueue/: CMakeLists.txt  Makefile  main.c
chapter02/ex03-linkedListSearch/: CMakeLists.txt  Makefile  main.c
chapter02/ex04-removeNode/: CMakeLists.txt  Makefile  main.c
chapter02/lectureCode/: CMakeLists.txt  Makefile  main.c
chapter03/: CMakeLists.txt
chapter03/ex01-dummyHeadNodeLinkedList/: CMakeLists.txt  Makefile  main.c
chapter03/ex02-doubleLinkedList/: CMakeLists.txt  Makefile  main.c
chapter03/ex03-01-stack/: CMakeLists.txt  Makefile  main.c
chapter03/ex03-02-queue/: CMakeLists.txt  Makefile  main.c
chapter03/ex04-divisionCode/: CMakeLists.txt  Makefile  main.c
chapter03/ex04-divisionCode/lib/: CMakeLists.txt
chapter03/ex04-divisionCode/lib/dataLib/: CMakeLists.txt  Makefile
chapter03/ex04-divisionCode/lib/dataLib/inc/: dataList.h
chapter03/ex04-divisionCode/lib/dataLib/src/: Makefile  dataList.c
chapter03/ex04-divisionCode/lib/uiLib/: CMakeLists.txt  Makefile
chapter03/ex04-divisionCode/lib/uiLib/inc/: uiMenu.h
chapter03/ex04-divisionCode/lib/uiLib/src/: uiMenu.c
chapter04/: CMakeLists.txt
chapter04/ex01-all-node sort/: CMakeLists.txt  Makefile  main.c  sortNode.c
chapter04/ex02-rangeSearch/: CMakeLists.txt  Makefile  main.c
chapter04/ex02-rangeSearch/lib/dataLib/: CMakeLists.txt
chapter04/ex02-rangeSearch/lib/dataLib/inc/: dataList.h
chapter04/ex02-rangeSearch/lib/dataLib/src/: dataList.c
chapter04/ex02-rangeSearch/lib/uiLib/: CMakeLists.txt
chapter04/ex02-rangeSearch/lib/uiLib/src/: uiMenu.c
chapter04/ex03-indexSort/: CMakeLists.txt  Makefile
chapter04/ex03-indexSort/lib/dataLib/: CMakeLists.txt
chapter04/ex03-indexSort/lib/dataLib/inc/: dataList.h
chapter04/ex03-indexSort/lib/dataLib/src/: dataList.c
chapter04/ex03-indexSort/lib/uiLib/: CMakeLists.txt  Makefile
chapter04/ex03-indexSort/lib/uiLib/inc/: uiMenu.h
chapter04/ex03-indexSort/lib/uiLib/src/: uiMenu.c
chapter04/ex04-multiIndex/: CMakeLists.txt  Makefile  main.c
chapter04/ex04-multiIndex/lib/dataLib/: CMakeLists.txt
chapter04/ex04-multiIndex/lib/dataLib/inc/: dataList.h
chapter04/ex04-multiIndex/lib/dataLib/src/: dataList.c
chapter04/ex04-multiIndex/lib/uiLib/: CMakeLists.txt
chapter04/ex04-multiIndex/lib/uiLib/inc/: uiMenu.h
chapter04/ex04-multiIndex/lib/uiLib/src/: uiMenu.c
chapter05/: CMakeLists.txt
chapter05/ex01-adt/: CMakeLists.txt  Makefile  main.c
chapter05/ex01-adt/lib/dataLib/: CMakeLists.txt
chapter05/ex01-adt/lib/dataLib/inc/: dataList.h
chapter05/ex01-adt/lib/dataLib/src/: dataList.c
chapter05/ex01-adt/lib/uiLib/: CMakeLists.txt
chapter05/ex01-adt/lib/uiLib/inc/: uiMenu.h
chapter05/ex01-adt/lib/uiLib/src/: Makefile
chapter05/ex02-dataSavedAndLoadFile/: CMakeLists.txt  Makefile  main.c
chapter05/ex02-dataSavedAndLoadFile/lib/dataLib/: CMakeLists.txt
chapter05/ex02-dataSavedAndLoadFile/lib/dataLib/inc/: dataList.h
chapter05/ex02-dataSavedAndLoadFile/lib/dataLib/src/: dataList.c
chapter05/ex02-dataSavedAndLoadFile/lib/uiLib/: CMakeLists.txt  Makefile
chapter05/ex02-dataSavedAndLoadFile/lib/uiLib/src/: uiMenu.c
chapter05/ex03-adtFileIO/: CMakeLists.txt  Makefile  main.c  menu.c  menu.h  singleList.c  singleList.h
